// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ogf patch-motion-refs should read back every stored ref 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read ogf file <sandbox>/several.ogf",
    "Ogf file information",
    "Version: 4, model_type: 3, shader_id: 0, OgfBox { min: Vector3d { x: -0.016617509, y: -0.043978497, z: -0.016535774 }, max: Vector3d { x: 0.016760565, y: 0.03416283, z: 0.016411088 } } - OgfSphere { position: Vector3d { x: 7.152837e-5, y: -0.0049078334, z: -6.234273e-5 }, radius: 0.045567695 }",
    "Boundaries box: OgfBox { min: Vector3d { x: -0.016617509, y: -0.043978497, z: -0.016535774 }, max: Vector3d { x: 0.016760565, y: 0.03416283, z: 0.016411088 } }",
    "Boundaries sphere: OgfSphere { position: Vector3d { x: 7.152837e-5, y: -0.0049078334, z: -6.234273e-5 }, radius: 0.045567695 }",
    "Description: OgfDescriptionChunk { source_file: "x:\\\\rawdata\\\\objects\\\\dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud.object", convertor: "\\\\\\\\DIEHARD\\\\Mr.DieHard", built_at: 0, creator: "\\\\\\\\DIEHARD\\\\Mr.DieHard", created_at: 1207749428, editor: "\\\\\\\\DIEHARD\\\\Mr.DieHard", edited_at: 1207749845 }",
    "Bones: 2",
    "[0] name: wpn_body",
    "[0] parent:",
    "[1] name: body",
    "[1] parent: wpn_body",
    "Motion refs: ["dynamics\\\\devices\\\\dev_bolt\\\\first", "dynamics\\\\devices\\\\dev_bolt\\\\second"]",
    "OGF children (1):",
    "[0] texture name: wpn\\wpn_bolt",
    "[0] shader name: models\\model",
  ],
}
`;

exports[`ogf patch-motion-refs should read back the stored refs 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read ogf file <sandbox>/repointed.ogf",
    "Ogf file information",
    "Version: 4, model_type: 3, shader_id: 0, OgfBox { min: Vector3d { x: -0.016617509, y: -0.043978497, z: -0.016535774 }, max: Vector3d { x: 0.016760565, y: 0.03416283, z: 0.016411088 } } - OgfSphere { position: Vector3d { x: 7.152837e-5, y: -0.0049078334, z: -6.234273e-5 }, radius: 0.045567695 }",
    "Boundaries box: OgfBox { min: Vector3d { x: -0.016617509, y: -0.043978497, z: -0.016535774 }, max: Vector3d { x: 0.016760565, y: 0.03416283, z: 0.016411088 } }",
    "Boundaries sphere: OgfSphere { position: Vector3d { x: 7.152837e-5, y: -0.0049078334, z: -6.234273e-5 }, radius: 0.045567695 }",
    "Description: OgfDescriptionChunk { source_file: "x:\\\\rawdata\\\\objects\\\\dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud.object", convertor: "\\\\\\\\DIEHARD\\\\Mr.DieHard", built_at: 0, creator: "\\\\\\\\DIEHARD\\\\Mr.DieHard", created_at: 1207749428, editor: "\\\\\\\\DIEHARD\\\\Mr.DieHard", edited_at: 1207749845 }",
    "Bones: 2",
    "[0] name: wpn_body",
    "[0] parent:",
    "[1] name: body",
    "[1] parent: wpn_body",
    "Motion refs: ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_replacement"]",
    "OGF children (1):",
    "[0] texture name: wpn\\wpn_bolt",
    "[0] shader name: models\\model",
  ],
}
`;

exports[`ogf patch-motion-refs should report a dry run without writing 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf motion refs <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud_animation", "omf\\\\wpn_mp5_hud_animation"] -> ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_replacement"]",
    "Dry run, nothing written, <sandbox>/never-written.ogf would receive 13839 bytes instead of 13867",
  ],
}
`;

exports[`ogf patch-motion-refs should rewrite in place when given no destination 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf motion refs <sandbox>/in-place.ogf, ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud_animation", "omf\\\\wpn_mp5_hud_animation"] -> ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_replacement"]",
    "Ogf motion refs written into <sandbox>/in-place.ogf",
  ],
}
`;

exports[`ogf patch-motion-refs should store motion refs 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf motion refs <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud_animation", "omf\\\\wpn_mp5_hud_animation"] -> ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_replacement"]",
    "Ogf motion refs written into <sandbox>/repointed.ogf",
  ],
}
`;

exports[`ogf patch-motion-refs should store several refs at once 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Patch ogf motion refs <resources>/gamedata/meshes/ogf/dev_bolt_hud.ogf, ["dynamics\\\\devices\\\\dev_bolt\\\\dev_bolt_hud_animation", "omf\\\\wpn_mp5_hud_animation"] -> ["dynamics\\\\devices\\\\dev_bolt\\\\first", "dynamics\\\\devices\\\\dev_bolt\\\\second"]",
    "Ogf motion refs written into <sandbox>/several.ogf",
  ],
}
`;

exports[`ogf patch-motion-refs should write the expected files 1`] = `
[
  {
    "path": "in-place.ogf",
    "sha256": "c6f2001eabbe797c06bb574e2e19e63faa32c12e6e48e4bbfae325e4b4bb539e",
    "size": 13839,
  },
  {
    "path": "repointed.ogf",
    "sha256": "c6f2001eabbe797c06bb574e2e19e63faa32c12e6e48e4bbfae325e4b4bb539e",
    "size": 13839,
  },
  {
    "path": "several.ogf",
    "sha256": "ef2dcc16948aeb66609def6571859087514754a7a38e3ee3345b1055b55f5c6a",
    "size": 13857,
  },
]
`;
